<resources>
    <string name="app_name">Ice Calculator</string>
    <string name="ac">AC</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="c">C</string>
    <string name="x">×</string>
    <string name="minus_symbol">−</string>
    <string name="plus_symbol">+</string>
    <string name="percent_symbol">%</string>
    <string name="divide_symbol">/</string>
    <string name="dot_symbol">.</string>
    <string name="equal_symbol">=</string>
    <string name="plus_minus_symbol">±</string>
    <string name="sample_text">hello</string>
</resources>