<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnColorDivider"
    tools:context=".activities.MainActivity">

    <android.widget.Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/seven"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnFour"
        app:layout_constraintEnd_toStartOf="@+id/btnEight"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAc" />

    <android.widget.Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/eight"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnFive"
        app:layout_constraintEnd_toStartOf="@+id/btnNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <android.widget.Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/nine"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnSix"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <android.widget.Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/x"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <android.widget.Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/four"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnOne"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <android.widget.Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/five"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnTwo"
        app:layout_constraintEnd_toStartOf="@+id/btnSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <android.widget.Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/six"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnThree"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <android.widget.Button
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/minus_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <android.widget.Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/one"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnZero"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <android.widget.Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/two"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <android.widget.Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/three"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnPlusMinus"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <android.widget.Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/plus_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <android.widget.Button
        android:id="@+id/btnAc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/ac"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnSeven"
        app:layout_constraintEnd_toStartOf="@+id/btnC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.widget.Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/c"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnEight"
        app:layout_constraintEnd_toStartOf="@+id/btnPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.widget.Button
        android:id="@+id/btnPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/percent_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnNine"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.widget.Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/divide_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.widget.Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/zero"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOne"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/dot_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnTwo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnThree"
        app:layout_constraintVertical_bias="1.0" />

    <android.widget.Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/back_view"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/equal_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <android.widget.Button
        android:id="@+id/btnPlusMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_dark"
        android:fontFamily="sans-serif"
        android:minHeight="80dp"
        android:text="@string/plus_minus_symbol"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnThree"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/back_view"
        android:fontFamily="sans-serif"
        android:gravity="bottom|right"
        android:padding="8dp"
        android:maxLines="1"
        android:maxLength="16"
        android:text="@string/zero"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnPercent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_toggle_selector"
        android:checked="true"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text=""
        android:textOff=""
        android:textOn=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/hScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="@+id/tvResult"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvResult"
        app:layout_constraintTop_toTopOf="@+id/tvResult"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:textAlignment="textEnd"
                android:maxLines="1"
                android:text="@string/sample_text"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="normal" />

        </ScrollView>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>